# smarter

./: .codespellrc  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  __.pre-commit-config.yaml  __version__.py  artifacthub-repo.yml  codespell.txt  docker-compose.yml  mypy.ini  package.json  pyproject.toml  release.config.js  requirements.txt  rst  tmp.console  tmp.json  tmp.yaml  tox.ini  values.yaml  wagtail_tables.sql
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml
aws/: certificate_manager.tf  cloudfront.tf  ecr.tf  kubernetes-deploy.deprecated  kubernetes-deploy.tf  kubernetes-ingress.tf  kubernetes-secrets.tf  kubernetes.tf  main.tf  route53.tf  s3.tf  terraform.tf  terraform.tfvars  variables.tf
changelogs/: CHANGELOG-v0.10.md  CHANGELOG-v0.12.md  CHANGELOG-v0.13.md  CHANGELOG-v0.14.md  CHANGELOG.md
doc/: ARCHITECTURE.md  CHATBOT_API.md  CLI.md  CONTRIBUTING.md  DJANGO-REACT-INTEGRATION.md  GOOD_CODING_PRACTICE.md  MANIFESTS.md  OPENAI_API_GETTING_STARTED_GUIDE.md  OPENAI_JSON_EXAMPLES.md  README.md  Twelve_Factor_Methodology.md  example-dot-env  smarter-codebase.xlsx
docs/: ARCHITECTURE.md  CHATBOT_API.md  CLI.md  DJANGO-REACT-INTEGRATION.md  GOOD_CODING_PRACTICE.md  OPENAI_API_GETTING_STARTED_GUIDE.md  README.md  example-dot-env  requirements.txt
react/: README.md  package.json
requirements/: base.txt  deploy.txt  local.txt
smarter/: .coveragerc  (+4 more)
(+3379 files in other folders)
